--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+    	compile group: 'org.antlr', name: 'antlr4-runtime', version: '4.7'
+    compile group: 'org.antlr', name: 'antlr4', version: '4.7'
+    
 }
 
 test.testLogging {
