--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ jdk:
   - oraclejdk8          // tells Travis to use Java 8
 
 after_success:
-  - gradle jacocoTestReport coveralls
+  - ./gradlew jacocoTestReport coveralls
+  
+  
